src/snapshots/bl__tests__snapshots__cmd_wait__load.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Wait until the page is fully loaded

Usage: bl wait load [OPTIONS]

Options:
      --timeout <timeout>  Timeout in milliseconds [default: 30000]
  -v, --verbose            Enable debug logging
      --headless           Hide browser window (visible by default)
      --json               Output as JSON
  -h, --help               Print help

Examples:
  bl wait load
  # Wait until document.readyState is "complete"

  bl wait load --timeout 10000
  # Wait up to 10 seconds
