src/snapshots/bl__tests__snapshots__cmd_wait__text.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Wait until text appears on the page

Usage: bl wait text [OPTIONS] <text>

Arguments:
  <text>  Text to wait for on the page

Options:
      --timeout <timeout>  Timeout in milliseconds [default: 30000]
  -v, --verbose            Enable debug logging
      --headless           Hide browser window (visible by default)
      --json               Output as JSON
  -h, --help               Print help

Examples:
  bl wait text "Welcome"
  # Waits until "Welcome" appears on the page

  bl wait text "Success" --timeout 10000
  # Wait with custom timeout (10 seconds)
